--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,9 @@
 
 header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
-    padding-top: 1rem;
-    padding-bottom: 2rem;
+    padding: 1rem 5rem 2rem;
     background-color: #255EE9;
 }
 
